--- a/client/src/index.css
+++ b/client/src/index.css
@@ -114,6 +114,43 @@
   transition: 0.1s;
 }
 
+.navigator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 400px;
+}
+.navigator__inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  max-width: 400px;
+  width: 100%;
+}
+.navigator__input {
+  padding: 15px;
+  border-radius: 10px;
+  outline: none;
+  border: 2px solid #5300d6;
+  font-size: 18px;
+  font-family: "Open Sans", sans-serif;
+  width: 100%;
+}
+.navigator__send-button {
+  width: 100%;
+  padding: 15px;
+  outline: none;
+  background: #5300d6;
+  color: white;
+  text-transform: uppercase;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  cursor: pointer;
+  border: none;
+}
+
 .footer {
   padding: 20px 0;
   border-top: 1px solid black;
@@ -157,4 +194,7 @@
   padding: 20px;
   height: 100%;
   flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }/*# sourceMappingURL=index.css.map */
